src/test/ui/associated-types/associated-types-unconstrained.stderr
error[E0283]: type annotations needed
  --> $DIR/associated-types-unconstrained.rs:14:20
   |
LL |     let x: isize = Foo::bar();
   |                    ^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
